# haskell_book

./: stack.yaml
99problems/: 1-10.hs  1-20.hs  1-30.hs
ch10/: ex1_understandingFolds.hs  ex2_databaseProcessing.hs  ex3_scans.hs  ex4_chapterExercises.hs
ch11/: ex10_chapterExercises.hs  ex11_ciphers.hs  ex12_asPatterns.hs  ex13_languageExercises.hs  ex14_phoneExercises.hs  ex15_huttons.hs  ex1_dogTypes.hs  ex2_vehicles.hs  ex3_cardinality.hs  ex4_forExample.hs  ex5_logicGoats.hs  ex6_pityTheBool.hs  ex7_garden.hs  ex8_programmers.hs  ex9_theQuad.hs  tooMany.hs  tree.hs
ch12/: ex1_determineTheKinds.hs  ex2_stringProcessing.hs  ex3_validateTheWord.hs  ex4_itsOnlyNatural.hs  ex5_maybeLibrary.hs  ex6_eitherLibrary.hs  ex7_unfolds.hs  ex8_binaryTree.hs
ch13/: ciphers.hs  intermission  palindrome.hs  person.hs
ch13/hangman/: hangman.cabal
ch13/hangman/.stack-work/: stack.sqlite3
ch13/hangman/.stack-work/ghci/503f4496/: cabal_macros.h
ch13/hangman/.stack-work/install/x86_64-osx/a5c9b505975b9afb227cbab340d33d80aff829a871daedf1cd7b526112f7e620/8.10.4/lib/x86_64-osx-ghc-8.10.4/hangman-0.1.0.0-DiPJtrsZBolKjRSa8linHi/: Gallows.dyn_hi  Words.dyn_hi  Words.hi
ch13/hangman/.stack-work/install/x86_64-osx/a5c9b505975b9afb227cbab340d33d80aff829a871daedf1cd7b526112f7e620/8.10.4/pkgdb/: hangman-0.1.0.0-DiPJtrsZBolKjRSa8linHi.conf  package.cache
ch13/hangman/exe/: Main.hs
ch13/hangman/src/: Gallows.hs  Puzzle.hs  Words.hs
ch14/: arbitraryNotes.hs  wordNumberTest.hs
ch14/exercises/: exercises.cabal
ch14/exercises/ex/: cipherTest.hs  dollarSign.hs  expAssociative.hs  foldr.hs  gen.hs  half.hs  idempotence.hs  lengthTake.hs  listOrdered.hs  multAssociative.hs  plusAssociative.hs  quotDiv.hs  reverse.hs  roundTrip.hs  squareVsSquareIdentity  wordNumberTest.hs
ch14/exercises/src/: ciphers.hs  wordNumber.hs
ch2/: ex1_comprehension.hs  ex2_parentheses.hs  ex3_healTheSick.hs  ex4_aHeadCode.hs  ex5_chapterExercises.hs  example.hs  learn.hs  practice.hs  test.hs
ch3/: ex1_scope.hs  ex2_syntaxErrors.hs  ex3_chapterExercises.hs  exercise.hs  print2.hs  rvrs.hs  topOrLocal.hs
ch4/: changeMood.hs  correction.hs  ex2_findTheMistakes.hs  ex3_chapterExercises.hs  fstSnd.hs  myAbs.hs  palindrome.hs
ch5/: addStuff.hs  curriedUncurried.hs  determineTheType.hs  ex1_typeMatching.hs  fixIt.hs  (+5 more)
(+58 files in other folders)
